src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/CD4AC3006.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram CD4AC3006 {
	
	interface A {
		String a;
	}
	interface B {
		int a;
	}
	
	class T;
	interface C {
		T t;
	}
}